// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CopyLinkButton > snapshots > copied state 1`] = `
<div>
  <button
    aria-live="polite"
    class="relative overflow-hidden active:scale-[0.96] motion-reduce:active:scale-100 flex items-center justify-center gap-2 rounded-xl px-4 py-2 lg:px-3 flex-row transition-[background-color,color,box-shadow,scale] duration-150 ease-out motion-reduce:transition-none h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-pca-white dark:text-pca-grey-900 dark:hover:bg-pca-grey-300 dark:active:bg-pca-grey-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      <span
        class="inline-grid"
      >
        <span
          aria-hidden="true"
          class="col-start-1 row-start-1 inline-flex items-center justify-center gap-2 pointer-events-none"
        >
          <svg
            aria-hidden="true"
            class="w-4.5 h-4.5 shrink-0 transition-[opacity,scale,filter] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-200 opacity-0 scale-[0.3] blur-[3px]"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H9M15 17H17C19.7614 17 22 14.7614 22 12C22 9.23858 19.7614 7 17 7H15M7 12H17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
          <span
            class="transition-[opacity,translate] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-200 opacity-0 -translate-y-1"
          >
            Copy link
          </span>
        </span>
        <span
          aria-hidden="false"
          class="col-start-1 row-start-1 inline-flex items-center justify-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="w-4.5 h-4.5 shrink-0 transition-[opacity,scale,filter] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-300 opacity-100 scale-100 blur-none"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
          <span
            class="transition-[opacity,translate] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-300 opacity-100 translate-y-0"
          >
            Link copied!
          </span>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`CopyLinkButton > snapshots > default state 1`] = `
<div>
  <button
    aria-live="polite"
    class="relative overflow-hidden active:scale-[0.96] motion-reduce:active:scale-100 flex items-center justify-center gap-2 rounded-xl px-4 py-2 lg:px-3 flex-row transition-[background-color,color,box-shadow,scale] duration-150 ease-out motion-reduce:transition-none h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-pca-white dark:text-pca-grey-900 dark:hover:bg-pca-grey-300 dark:active:bg-pca-grey-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      <span
        class="inline-grid"
      >
        <span
          aria-hidden="false"
          class="col-start-1 row-start-1 inline-flex items-center justify-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="w-4.5 h-4.5 shrink-0 transition-[opacity,scale,filter] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-300 opacity-100 scale-100 blur-none"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H9M15 17H17C19.7614 17 22 14.7614 22 12C22 9.23858 19.7614 7 17 7H15M7 12H17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
          <span
            class="transition-[opacity,translate] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-300 opacity-100 translate-y-0"
          >
            Copy link
          </span>
        </span>
        <span
          aria-hidden="true"
          class="col-start-1 row-start-1 inline-flex items-center justify-center gap-2 pointer-events-none"
        >
          <svg
            aria-hidden="true"
            class="w-4.5 h-4.5 shrink-0 transition-[opacity,scale,filter] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-200 opacity-0 scale-[0.3] blur-[3px]"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
          <span
            class="transition-[opacity,translate] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-200 opacity-0 translate-y-1"
          >
            Link copied!
          </span>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`CopyLinkButton > snapshots > disabled state 1`] = `
<div>
  <button
    aria-disabled="true"
    aria-live="polite"
    class="relative overflow-hidden active:scale-[0.96] motion-reduce:active:scale-100 flex items-center justify-center gap-2 rounded-xl px-4 py-2 lg:px-3 flex-row transition-[background-color,color,box-shadow,scale] duration-150 ease-out motion-reduce:transition-none h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 pointer-events-none bg-pca-grey-300 text-pca-grey-600 dark:bg-pca-grey-800 dark:text-pca-grey-400"
    disabled=""
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      <span
        class="inline-grid"
      >
        <span
          aria-hidden="false"
          class="col-start-1 row-start-1 inline-flex items-center justify-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="w-4.5 h-4.5 shrink-0 transition-[opacity,scale,filter] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-300 opacity-100 scale-100 blur-none"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 17H7C4.23858 17 2 14.7614 2 12C2 9.23858 4.23858 7 7 7H9M15 17H17C19.7614 17 22 14.7614 22 12C22 9.23858 19.7614 7 17 7H15M7 12H17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
          <span
            class="transition-[opacity,translate] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-300 opacity-100 translate-y-0"
          >
            Copy link
          </span>
        </span>
        <span
          aria-hidden="true"
          class="col-start-1 row-start-1 inline-flex items-center justify-center gap-2 pointer-events-none"
        >
          <svg
            aria-hidden="true"
            class="w-4.5 h-4.5 shrink-0 transition-[opacity,scale,filter] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-200 opacity-0 scale-[0.3] blur-[3px]"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
          <span
            class="transition-[opacity,translate] ease-[cubic-bezier(0.25,0.1,0,1)] motion-reduce:transition-none duration-200 opacity-0 translate-y-1"
          >
            Link copied!
          </span>
        </span>
      </span>
    </span>
  </button>
</div>
`;
